--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,19 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+dockerhub_auth: $dockerhub_auth
+  auth:
+    username: $DOCKERHUB_USERNAME
+    password: $DOCKERHUB_PASSWORD
+
 executors:
   test:
     working_directory: ~/repo
     docker:
-      - image: circleci/golang:1.15.8
+      - image: golang:1.16.3
+	    <<: *dockerhub_auth
+		environment:
+		  TZ: Asia/Tokyo
 
 commands:
   restore_go_mod_cache:
