--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-dockerhub_auth: $dockerhub_auth
+dockerhub_auth: &dockerhub_auth
   auth:
     username: $DOCKERHUB_USERNAME
     password: $DOCKERHUB_PASSWORD
