change working directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ dockerhub_auth: &dockerhub_auth
 
 executors:
   test:
-    working_directory: ~/repo
+    working_directory: ~/sp_api
     docker:
       - image: circleci/golang:1.16.3
         <<: *dockerhub_auth
