--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,6 @@ services:
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
       - ./db/docker/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./db/docker/ddl:/docker-entrypoint-initdb.d
+      - ./db/docker/init:/docker-entrypoint-initdb.d
     ports:
       - 23306:3306
