--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       MYSQL_USER: sp
       MYSQL_PASSWORD: sp
       TZ: 'UTC'
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --local-infile=1
     volumes:
       - ./db/docker/my.cnf:/etc/mysql/conf.d/my.cnf
       - ./db/docker/init:/docker-entrypoint-initdb.d
