changed database from mysql to postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,13 @@ services:
     command: redis-server --requirepass 'password'
   db:
     container_name: sp_db
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: sp
-      MYSQL_USER: sp
-      MYSQL_PASSWORD: sp
-      TZ: 'UTC'
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --local-infile=1
-    volumes:
-      - ./db/docker/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./db/docker/init:/docker-entrypoint-initdb.d
+    image: postgres:13.2
     ports:
-      - 23306:3306
+      - 25432:5432
+    volumes:
+      - ./db/docker/init:/docker-entrypoint-initdb.d
+    environment:
+      POSTGRES_USER: sp
+      POSTGRES_PASSWORD: sp
+      POSTGRES_DB: sp
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
