--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     command: redis-server --requirepass 'password'
   db:
     container_name: sp_db
-    image: postgres:13.2
+    image: postgres:13.2-alpine
     ports:
       - 25432:5432
     volumes:
