--- a/config/environments/test.yml
+++ b/config/environments/test.yml
@@ -1,5 +1,5 @@
 database:
-    driver: postgresql
+    driver: postgres
     user: ${DATABASE_USER}
     password: ${DATABASE_PASSWORD}
     host: ${DATABASE_HOST}
